Fix size of place ship modal
The modal had a scrollbar. Making sure that the max width is narrower
helps.

--- a/src/style.css
+++ b/src/style.css
@@ -256,7 +256,7 @@ body{
 
 #placeShipModalContainer{
   display: grid;
-  width: clamp(300px, 80vw, 600px);
+  width: clamp(300px, 80vw, 500px);
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
